Added basic table.

--- a/site/index.html
+++ b/site/index.html
@@ -10,6 +10,20 @@
 <body>
 
 <!-- This is a description of what you should do for this task.  You can remove it for your answer -->
+<table id="price-table">
+    <tr>
+        <th>Name</th>
+        <th>Best Bid</th>
+        <th>Best Ask</th>
+        <th>Change in Best Bid</th>
+        <th>Change in Best Ask</th>
+        <th>Mid price variation</th>
+    </tr>
+    <tbody id="content"></tbody>
+</table>
+
+<hr>
+
 <section class="content">
     <h1>Updating Table</h1>
 
